--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -95,7 +95,8 @@ input, select, textarea {
 	}
 
 	body {
-		background: #1b1f22;
+		/*background: #1b1f22;*/
+                  background: #494C4E'
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -1155,7 +1156,8 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url("../../images/bg.jpg");
+			/*background-image: url("../../images/bg.jpg");*/
+ 			background-image: url("../../images/darkgray.png");
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
