--- a/assets/sass/layout/_bg.scss
+++ b/assets/sass/layout/_bg.scss
@@ -46,7 +46,8 @@
 				'transform #{_duration(article)} ease-in-out',
 				'filter #{_duration(article)} ease-in-out'
 			));
-			background-image:		url('../../images/bg.jpg');
+			// background-image:		url('../../images/bg.jpg');/*
+			background-image: 		url('../../images/darkgray.png');
 			background-position:	center;
 			background-size:		cover;
 			background-repeat:		no-repeat;
