--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -31,13 +31,14 @@
 
 // Palette.
 	$palette: (
-		bg:							#1b1f22,
+	//	bg:							#1b1f22,
+		bg: 						#494C4E,
 		bg-alt:						#000000,
 		bg-overlay:					rgba(19,21,25,0.5),
-		fg:							#ffffff,
+		fg:						#ffffff,
 		fg-bold:					#ffffff,
 		fg-light:					rgba(255,255,255,0.5),
 		border:						#ffffff,
 		border-bg:					rgba(255,255,255,0.075),
-		border-bg-alt:				rgba(255,255,255,0.175)
+		border-bg-alt:					rgba(255,255,255,0.175)
 	);
