go back to original background

--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -31,8 +31,8 @@
 
 // Palette.
 	$palette: (
-	//	bg:							#1b1f22,
-		bg: 						#494C4E,
+		bg:						#1b1f22,
+//		bg: 						#494C4E,
 		bg-alt:						#000000,
 		bg-overlay:					rgba(19,21,25,0.5),
 		fg:						#ffffff,
